--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: ${{ secrets.NODE_ENV }}
 
     steps:
       - name: Clonar repositorio
@@ -26,4 +28,4 @@ jobs:
         run: npm test
 
       - name: Ver entorno
-        run: echo 'Entorno actual: ${{ secrets.NODE_ENV }}'
+        run: echo "Entorno actual: $NODE_ENV"
